src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/inline_array_empty_cells_check_without_lvalue.sol
contract c {
  uint[] a;
  function f() returns (uint, uint) {
    return ([3, ,4][0]);
  }
}